--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,28 @@
 
     <div class="ingredients-form">
         <form id="ing-form">
+            <!-- Ingredient name -->
             <label for="ing-name">Ingredient Name</label><br>
             <input type="text" id="ing-name" name="ingredientName"><br>
+            <!-- Ingredient kcal count -->
             <label for="ing-kcal-count">Kcal count</label><br>
             <input type="number" id="ing-kcal-count" name="ingredientKcalCount"><br>
+            <!-- New ingredient category -->
+            <label for="ing-category">Ingredient Category</label><br>
+            <input type="text" id="ing-category">
+            <!-- Select from existing ingredient category -->
+            <select id="existing-categories">
+                <!-- existing categories will be added dynamically -->
+            </select>
+            <!-- Create button -->
             <button type="submit">Create</button>
         </form>
     </div>
 
     <div class="ingredients-list">
-        <h2>Ingredients Lists</h2>
+        <h2>Ingredients List</h2>
         <ul>
-            <!-- keep empty -->
+            <!-- ingredients will be added dynamically -->
         </ul>
         <button id="clear">Clear Ingredients List</button>
     </div>
