--- a/public/index.html
+++ b/public/index.html
@@ -48,10 +48,10 @@
                     <input type="time" id="meal-time" required><br>
                     <!-- Select recipes -->
                     <label for="selected-recipes">Select Recipes</label><br>
-                    <select id="selected-recipes" multiple>
+                    <select id="selected-recipes" multiple required>
                         <!-- will be added dynamically -->
                     </select><br>
-                    <button type="submit">Add Meal</button>
+                    <button type="submit" id="meal-form-submit">Add Meal</button>
                 </form>
             </div>
 
@@ -63,11 +63,11 @@
                     <input type="text" id="recipe-name" pattern="[a-zA-Z][a-z A-Z]*[a-zA-Z]" required><br>
                     <!-- Select ingredients name -->
                     <label for="selected-ingredients">Select Ingredients</label><br>
-                    <select id="selected-ingredients" multiple>
+                    <select id="selected-ingredients" multiple required>
                         <!-- will be added dynamically -->
                     </select><br>
 
-                    <button type="submit">Create Recipe</button>
+                    <button type="submit" id="recipe-form-submit">Create Recipe</button>
                 </form>
 
                 <div class="recipes-list">
@@ -75,7 +75,7 @@
                     <ul>
                         <!-- will be added dynamically -->
                     </ul>
-                    <button id="clear-recipes-list">Clear Recipes List</button>
+                    <button id="clear-recipes-list">Clear Recipes and Meals Lists</button>
                 </div>
             </div>
 
@@ -84,10 +84,10 @@
                 <form id="ingredient-form">
                     <!-- Ingredient name -->
                     <label for="ingredient-name">Ingredient Name</label><br>
-                    <input type="text" id="ingredient-name" pattern="[a-zA-Z][a-z A-Z]*[a-zA-Z]" required><label id="ingredient-name-error"></label><br>
+                    <input type="text" id="ingredient-name" pattern="[a-zA-Z][a-z A-Z]*[a-zA-Z]" required><br>
                     <!-- Ingredient kcal count -->
                     <label for="ingredient-kcal-count">Kcal count</label><br>
-                    <input type="number" id="ingredient-kcal-count" min="0.1" required><br>
+                    <input type="number" id="ingredient-kcal-count" min="1" required><br>
                     <!-- New ingredient category -->
                     <label for="ingredient-category">Ingredient Category</label><br>
                     <!-- Select from existing ingredient category -->
@@ -104,7 +104,7 @@
                     <ul>
                         <!-- will be added dynamically -->
                     </ul>
-                    <button id="clear-ingredients-list">Clear Ingredients List</button>
+                    <button id="clear-ingredients-list">Clear All Lists</button>
                 </div>
             </div>
         </div>
