fixed css to work for mobile devices as well

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                     <!-- will be added dynamically -->
                 </ul>
             </div>
-            <button id="clear-meals-list">Clear Meals List</button>
+            <button id="clear-meals-list">Clear Recent Meals</button>
         </div>
 
         <div class="menu">
@@ -89,7 +89,7 @@
                             <!-- will be added dynamically -->
                         </ul>
                     </div>
-                    <button id="clear-recipes-list">Clear Recipes and Meals Lists</button>
+                    <button id="clear-recipes-list">Clear Recipes and Recent Meals</button>
                 </div>
             </div>
 
