--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                     <!-- will be added dynamically -->
                 </ul>
             </div>
-            <button id="clear-meals-list">Clear Recent Meals</button>
+            <button class="clearType" id="clear-meals-list">Clear Recent Meals</button>
         </div>
 
         <div class="menu">
@@ -56,7 +56,8 @@
                         <input type="time" id="meal-time" required><br>
                     </div>
                     <!-- Select recipes -->
-                    <label for="selected-recipes">Select Recipes</label><br>
+                    <label for="selected-recipes">Select Recipes<span style="font-size: x-small;">&emsp;(hold CTRL to
+                            select multiple)</span></label><br>
                     <select id="selected-recipes" size="4" multiple required>
                         <!-- will be added dynamically -->
                     </select><br>
@@ -73,7 +74,8 @@
                         <input type="text" id="recipe-name" pattern="[a-zA-Z][a-z A-Z]*[a-zA-Z]" required
                             placeholder="Type recipe name here"><br>
                         <!-- Select ingredients name -->
-                        <label for="selected-ingredients">Select Ingredients</label><br>
+                        <label for="selected-ingredients">Select Ingredients<span
+                                style="font-size: x-small;">&emsp;(hold CTRL to select multiple)</span></label><br>
                         <select id="selected-ingredients" size="8" multiple required>
                             <!-- will be added dynamically -->
                         </select><br>
@@ -89,7 +91,7 @@
                             <!-- will be added dynamically -->
                         </ul>
                     </div>
-                    <button id="clear-recipes-list">Clear Recipes and Recent Meals</button>
+                    <button class="clearType" id="clear-recipes-list">Clear Recipes and Recent Meals</button>
                 </div>
             </div>
 
@@ -112,12 +114,12 @@
                         <!-- New ingredient category -->
                         <label for="ingredient-category">Ingredient Category</label><br>
                         <!-- Select from existing ingredient category -->
-                        <select id="existing-ingredient-categories">
+                        <select id="existing-ingredient-categories" required>
                             <!-- will be added dynamically -->
                         </select>
                         <p class="category-or"> OR </p><br>
                         <input type="text" id="ingredient-category" pattern="[a-zA-Z][a-z A-Z]*[a-zA-Z]"
-                            placeholder="New Category"><br>
+                            placeholder="Create new category"><br>
                         <!-- Create button -->
                         <button type="submit">Create</button>
                     </form>
@@ -130,7 +132,7 @@
                             <!-- will be added dynamically -->
                         </ul>
                     </div>
-                    <button id="clear-ingredients-list">Clear All Lists</button>
+                    <button class="clearType" id="clear-ingredients-list">Clear All Lists</button>
                 </div>
             </div>
         </div>
