--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,8 @@
                         <input type="time" id="meal-time" required><br>
                     </div>
                     <!-- Select recipes -->
-                    <label for="selected-recipes">Select Recipes<span style="font-size: x-small;">&emsp;(hold CTRL to
-                            select multiple)</span></label><br>
+                    <label for="selected-recipes">Select Recipes&ensp;<span
+                            class="select-instructions"></span></label><br>
                     <select id="selected-recipes" size="4" multiple required>
                         <!-- will be added dynamically -->
                     </select><br>
@@ -74,8 +74,8 @@
                         <input type="text" id="recipe-name" pattern="[a-zA-Z][a-z A-Z]*[a-zA-Z]" required
                             placeholder="Type recipe name here"><br>
                         <!-- Select ingredients name -->
-                        <label for="selected-ingredients">Select Ingredients<span
-                                style="font-size: x-small;">&emsp;(hold CTRL to select multiple)</span></label><br>
+                        <label for="selected-ingredients">Select Ingredients&ensp;<span
+                                class="select-instructions"></span></label><br>
                         <select id="selected-ingredients" size="8" multiple required>
                             <!-- will be added dynamically -->
                         </select><br>
